--- a/src/test/resources/test-hibernate.properties
+++ b/src/test/resources/test-hibernate.properties
@@ -1,5 +1,5 @@
 hibernate.generate_statistics=true
-hibernate.hbm2ddl.auto=update
+hibernate.hbm2ddl.auto=create-drop
 hibernate.show_sql=true
 hibernate.format_sql=true
 hibernate.dialect=org.hibernate.dialect.H2Dialect
