--- a/build.gradle
+++ b/build.gradle
@@ -41,8 +41,8 @@ dependencies {
     compile("com.h2database:h2")
     
     compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310")
-    
     compile 'org.apache.commons:commons-lang3:3.5'
+    compile 'org.apache.httpcomponents:httpclient:4.5.2'
     
     testCompile("junit:junit")
     testCompile("org.springframework.boot:spring-boot-starter-test")
