--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.h2.console.enabled = true
 RemoteAddressResolver.name = mockRemoteAddressResolver
+LoanApplicationLimitRequest.validate.too.many = true
