Curl scripts and the demo data.sql was added.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.h2.console.enabled = true
+spring.datasource.initialize = true
+
 RemoteAddressResolver.name = mockRemoteAddressResolver
 LoanApplicationLimitRequest.validate.too.many = true
