Fixed the validation of too many requests with the capitalize country code.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 spring.h2.console.enabled = true
 spring.datasource.initialize = true
+spring.jackson.default-property-inclusion = non_empty
 
+#RemoteAddressResolver.name = requestRemoteAddressResolver
 RemoteAddressResolver.name = mockRemoteAddressResolver
 LoanApplicationLimitRequest.validate.too.many = true
+#LoanApplicationLimitRequest.too.many.timeframe.sec = 100
+#LoanApplicationLimitRequest.too.many.count = 3
+#LoanApplicationLimitRequest.validate.second = true
