--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,7 @@ dependencies {
 }
 
 test {
+	//testLogging.showStandardStreams = true
 	testLogging {
         events "passed", "skipped", "failed"
     }
